--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.16.0",
-    "@mui/material": "^5.16.4",
+    "@mui/lab": "^6.0.0-beta.17",
+    "@mui/material": "^6.1.9",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
