--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@mui/lab": "^6.0.0-beta.17",
     "@mui/material": "^6.1.9",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/classnames": "^2.3.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "framer-motion": "^11.13.1",
+    "classnames": "^2.5.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.464.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
@@ -30,10 +34,13 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.15.0",
+    "shadcn-ui": "^0.9.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -43,7 +50,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.2.0"
   }
 }
